app/assets/stylesheets/business_show.css
.business-show-header {
    background: #d32323;
    padding-top: 12px;
    padding-bottom: 14px;
    position: relative;
    z-index: 6;
}

.business-header-container {
    width: 996px;
    height: 40px;
    display: flex;
    justify-content: center;
    margin-left: 97px;
    margin-right: 97px;
    border-spacing: 18px 0;
    border-collapse: separate;
    display: flex;
    justify-content: center;
}

.business-header-logo {
    background-image: url(https://i.imgur.com/khxz88S.png);
    height: 40px;
    width: 80px;
    background-size: 100%;
    margin-right: 20px;
}

.business-search-container {
    width: 703px;
    height: 40px;
    display: flex;
    justify-content: center;
}

.business-show-search {
    width: 703px;
    height: 40px;
    display: flex;
}

.business-show-search-left {
    width: 327.5px;
    height: 36px;
}

.business-show-search-right {
    width: 327.5px;
    height: 36px;
}

.business-show-login-signup {
    width: 141px;
    height: 40px;
    display: flex;
    justify-content: space-evenly;
    border-radius: 3px;
    font-size: 13px;
    font-weight: 700;
}

.business-show-signup-box {
    width: 72.64;
    height: 37px;
    background: #f5f5f5;
    color: #000;
    cursor: pointer;
    text-decoration: none;
    border-radius: 3px;
}
.business-show-login-box {
    width: 64.77px;
    height: 37px;
    background: #d32323;
    border: 1px solid #bd1f1f;
    border-radius: 3px;
}

.business-show-login{
    width: 100%;
    text-decoration: none;
    color: white;
    line-height: 37px;
    padding: 12px;
    font-size: 13px;
    font-family: "Helvetica Neue";
}

.business-show-signup{
    width: 100%;
    text-decoration: none;
    color: #000;
    padding: 12px;
    line-height: 37px;
    font-size: 13px;
    font-family: "Helvetica Neue";
}

.business-show-search-button {
    width: 54px;
    height: 36px;
    margin-left: -25px;
    background: #d32323;
    border: 1px solid #bd1f1f;
    cursor: pointer;
    border-radius: 3px;
}

.search-button-business-show {
    vertical-align: middle;
    width: 100%;
    height: 100%;
    background: #BD1F1F;
    border: 1px solid #bd1f1f;
    border-radius: 3px;
}

.business-show-search-image{
    width: 100%;
    height: 100%;
    background-image: url(https://i.imgur.com/6nfeJt3.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size:50%;
}

.business-show-search-left .searchbar-left-inside {
    width: 321px;
    height: 36px;
    margin-top: -5px;
}

.business-show-search-right .searchbar-right-inside {
    width: 321px;
    height: 36px;
    margin-top: -5px;
}

.business-show-search-left .searchbar-left-inside .business-search {
    width: 321px;
    height: 36px;
    margin-left: 10px;
}
.business-show-search-right .searchbar-right-inside .location-search {
    width: 321px;
    height: 36px;
}

.categories-main-header {
    position: relative;
    background: #fafafa;
    font-size: 100%;
    font: inherit;
    border-bottom: 1px solid #e6e6e6;
    border-color: #e6e6e6;
}

.business-show-categories-container{
    width: 996px;
    height: 40px;
    display: flex;
    justify-content: center;
    margin-left: 97px;
    margin-right: 97px;
    border-spacing: 18px 0;
    border-collapse: separate;
    display: flex;
    justify-content: center;
}

.ul-categories-business-show {
    display: flex;
    justify-content: space-evenly;
    color: #333333;
    font-size: 14px;
    font-family:"Helvetica Neue";
    font-weight: 500;
    
}

.categories-restaurants {
    width: 157px;
    height: 40px;
    border: 1px solid #e6e6e6;
}

.ul-categories-business-show li {
    text-align: center;
    border: 1px solid #e6e6e6;
}

.ul-categories-business-show span {
    line-height: 41.5px;
}
.categories-home-services {
    width: 175px;
    height: 40px;
    
}

.categories-auto-services {
    width: 168px;
    height: 40px;
    
}

.categories-more {
    width: 91px;
    height: 40px;
    
}

.categories-separator {
    width: 50px;
    height: 40px;
    
}

.categories-review {
    width: 156px;
    height: 40px;
    
}

.categories-business {
    width: 159px;
    height: 40px;
    
}

